--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-a
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>gg紹介ページ</title>
+</head>
+<body>
+  <h1>gg紹介ページ</h1>
+  <p><a href="https://gg.mh4.jp/">gg.mh4.jp</a>の紹介ページになります。</p>
+</body>
+</html>
