--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>gg紹介ページ</title>
+  <link rel="stylesheet" href="gg.css">
 </head>
 <body>
-  <h1>gg紹介ページ</h1>
-  <p><a href="https://gg.mh4.jp/">gg.mh4.jp</a>の紹介ページになります。</p>
+  <div class="container">
+    <h1>gg紹介ページ</h1>
+    <p><a href="https://gg.mh4.jp/">gg.mh4.jp</a>の紹介ページになります。</p>
+  </div>
 </body>
 </html>
