--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>背景動画とコンテンツ</title>
+  <title>gg紹介ページ</title>
   <link rel="stylesheet" href="gg.css">
 </head>
 <body>
