--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </section>
 
   <section class="video-section">
-    <video autoplay muted loop class="background-video">
+    <video autoplay muted loop playsinline class="background-video">
       <source src="images/gg1.mp4" type="video/mp4">
       お使いのブラウザはビデオタグをサポートしていません。
     </video>
@@ -33,7 +33,7 @@
   </section>
 
   <section class="video-section">
-    <video autoplay muted loop class="background-video">
+    <video autoplay muted loop playsinline class="background-video">
       <source src="images/gg2.mp4" type="video/mp4">
       お使いのブラウザはビデオタグをサポートしていません。
     </video>
@@ -46,7 +46,7 @@
   </section>
 
   <section class="video-section">
-    <video autoplay muted loop class="background-video">
+    <video autoplay muted loop playsinline class="background-video">
       <source src="images/gg3.mp4" type="video/mp4">
       お使いのブラウザはビデオタグをサポートしていません。
     </video>
@@ -60,7 +60,7 @@
   </section>
 
   <section class="video-section">
-    <video autoplay muted loop class="background-video">
+    <video autoplay muted loop playsinline class="background-video">
       <source src="images/gg4.mp4" type="video/mp4">
       お使いのブラウザはビデオタグをサポートしていません。
     </video>
@@ -73,7 +73,7 @@
   </section>
 
   <section class="video-section">
-    <video autoplay muted loop class="background-video">
+    <video autoplay muted loop playsinline class="background-video">
       <source src="images/gg5.mp4" type="video/mp4">
       お使いのブラウザはビデオタグをサポートしていません。
     </video>
