--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <h1>オブジェクトを攻撃してゲーム開始</h1>
     <p>攻撃によりカウントダウンが開始されます。</p>
     <p>再度攻撃により短縮できます。</p>
-    <p>敵を全て倒すことで次のwaveが予約され、レベルが上がっていきます。</p>
+    <p>全ての敵を倒すことで次のwaveが予約され、レベルが上がっていきます。</p>
   </section>
 
   <section class="video-section">
