--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <section class="main-content">
     <h1>オプション</h1>
     <p>コンソールよりsetWave(数値)の実行により任意のwaveクリア状態へ設定できます。</p>
-    <p>0~100の数値である必要があります。</p>
+    <p>waveが予約されていない状態かつ0~100の数値である必要があります。</p>
   </section>
 
   <section class="video-section">
