--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <section class="main-content">
     <h1>gg紹介ページ</h1>
-    <p><a href="https://gg.mh4.jp/" target="_blank" rel="noopener noreferrer">gg.mh4.jp</a>の紹介ページになります。</p>
+    <p><a href="https://gg.mh4.jp/" target="_blank" rel="noopener noreferrer">https://gg.mh4.jp/</a>の紹介ページになります。</p>
     <p>このゲームはポートフォリオとして作成されました。</p>
     <p>1ブロックが16*16ピクセル単位ですので、デフォルトの拡大率では小さく表示されます。</p>
     <p>拡大率を上げることをお勧めします。</p>
